[package]
name = "sp_domain"
version = "0.1.0"
edition = "2021"

[dependencies]
rustc-hash = "1.1.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
peg = "0.6"
rand = "0.8.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "state_eval"
harness = false
