[package]
name = "sp_formal"
version = "0.1.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp_domain = { path = "../sp_domain/" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.15"
rayon = "1.5"
which = "4.1.0"
snap = "1"
tempfile = "3.4.0"
