[package]
name = "sp_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
sp_domain = { path = "../sp_domain/" }
sp_model = { path = "../sp_model/" }
sp_formal = { path = "../sp_formal/" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.9", features = ["serde"] }
sp_ros = { path = "../sp_ros/", features = ["ros"]}
futures = "0.3.25"
r2r = { version = "0.7.0" }
